Use Jaeger-Thrift exporter by default (#33)
* Use Jaeger-Thrift exporter by default

* Fix documentation and default destination

* Format